# freyrmonitoring

./: .gitignore  CREATE_DATABASE.example  LICENSE  README.md  commands.md  gdal.install  installation.md  pyproject.toml  requirements.txt  update_system.example
freyr_app/: calculate_clusters.py  config.ini.example  manage.py
freyr_app/core/: admin.py  apps.py  forms.py  tasks.py
freyr_app/core/crawlers/: __init__.py  freyr_crawler.py  insta.py  koza.py  newsnn.py  newsroom24.py  novgorod_ru.py  ok.py  pravdann.py  progorodnn.py  telega.py  twitter.py  vgoroden.py  vk.py  vn_ru.py  yt.py
freyr_app/core/models/: __init__.py  article.py  category.py  comment.py  district.py  entity.py  happiness.py  site.py  theme.py
freyr_app/core/nn/: __init__.py  category.py
freyr_app/core/processing/: calculate_indexes.py  clustering.py  custom_sites.py  markup_content.py  named_entity.py  nlp.py  predictor.py  scrape_socio.py  search.py  sentiment.py  url.py
freyr_app/core/templates/: appeals.html  entity_page.html  event_page.html  events.html  footer.html  footer_index.html  happiness.html  happiness_add.html  header.html  index.html  items.html  orgs.html  person_page.html  persons.html  search.html  sidebar.html  sources.html  test.html
freyr_app/core/tests/: test_crawlers.py  (+1 more)
freyr_app/freyr_app/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
freyr_app/parsers/: __init__.py  insta.py  ok.py  vk.py
freyr_app/processing/: clustering.py  collectors.py  crawlers.py
freyr_app/russia/: __init__.py  admin.py  apps.py
p/: ПрезентацияБилайну.pptx
(+25 files in other folders)
